chore: uninstall styled-components

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "axios": "^1.7.8",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "styled-components": "^6.1.13"
+    "react-dom": "19.0.0-rc-66855b96-20241106"
   }
 }
